--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
+    <link rel="stylesheet" href="/styles.css" />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
-
     <title>Frontend Mentor | Results summary component</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       .attribution {
         font-size: 11px;
@@ -26,15 +23,56 @@
     </style>
   </head>
   <body>
-    Your Result 76 of 100 Great You scored higher than 65% of the people who
-    have taken these tests. Summary Reaction 80 / 100 Memory 92 / 100 Verbal 61
-    / 100 Visual 72 / 100 Continue
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+    <div class="contenedor">
+      <div class="contenedor__hijo">
+        <h3>Your Result</h3>
+        <div>
+          <p>76</p>
+          <p>of 100</p>
+        </div>
+        <p>Great</p>
+        <p>
+          You scored higher than 65% of the people who have taken these tests.
+        </p>
+      </div>
+      <div class="contenedor__hijo">
+        <h3>Summary</h3>
+        <div>
+          <div>
+            <img
+              src="assets/images/icon-reaction.svg"
+              alt="Imagen de Reaction"
+            />
+            <p>Reaction</p>
+          </div>
+          <p><b>80</b> / 100</p>
+        </div>
+        <div>
+          <div>
+            <img src="assets/images/icon-memory.svg" alt="Imagen de Reaction" />
+            <p>Memory</p>
+          </div>
+          <p><b>92</b> / 100</p>
+        </div>
+        <div>
+          <div>
+            <img src="assets/images/icon-verbal.svg" alt="Imagen de Reaction" />
+            <p>Verbal</p>
+          </div>
+          <p><b>61</b> / 100</p>
+        </div>
+        <div>
+          <div>
+            <img src="assets/images/icon-visual.svg" alt="Imagen de Reaction" />
+            <p>Visual</p>
+          </div>
+          <p><b>73</b> / 100</p>
+        </div>
+      </div>
     </div>
+
+    <!-- Your Result 76 of 100 Great You scored higher than 65% of the people who
+    have taken these tests. Summary Reaction 80 / 100 Memory 92 / 100 Verbal 61
+    / 100 Visual 72 / 100 Continue -->
   </body>
 </html>
